<resources>
    <string name="app_name">Online News Reader</string>
    <string name="bookmark">book mark</string>
    <string name="setting">Setting</string>
    <string name="canceled_the_match_between_thailand_and_russia">Canceled the match between Thailand and Russia</string>
    <string name="settings">Settings</string>
    <string name="saved_items">Saved Items</string>
    <string name="news">News</string>
    <string name="first">First</string>
    <string name="typhoon_yagi_converted_from_quang_ninh_to_hai_phong">Typhoon Yagi Converted from Quang Ninh to Hai Phong</string>
    <string name="the_reason_why_little_house_on_the_prairie_left_the_city_to_return_to_the_countryside">The reason why \'Little House on the Prairie\' left the city to return to the countryside</string>
    <string name="star">star\n</string>
    <string name="second">second</string>
    <string name="third">third</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summarized_article1">Wind patterns from typhoon Yagi triggered heave rains that caused devastating floods and landslides in Lao Cai, Yen Bai, Thai Nguyen and Cao Bang provinces on Monday.</string>
    <string name="time1">USTH News  |  9/9/2024</string>
    <string name="article1_title">Floods ravage Vietnam\'s northern highlands in wake of typhoon Yagi</string>
    <string name="article2_title">Cristiano Ronaldo scores 901st career goal to rescue Portugal in the Nations League</string>
    <string name="article2_summarized">Cristiano Ronaldo scored his 901st career goal on Sunday as he rescued a 2-1 victory for Portugal against Scotland in the UEFA Nations League.</string>
    <string name="article2_time">USTH News | 10/9/2024</string>
    <string name="article3_title">Taylor Swift and Travis Kelce serve couple goals at the US Open final</string>
    <string name="article3_summarized">Swift and Kelce were among the famous faces shown on broadcast of the US Open men’s singles final on Sunday. Italy’s Jannik Sinner beat out American tennis star Taylor Fritz in the match</string>
    <string name="time3">USTH News | 8/9/2024</string>
    <string name="article4_title">Pharrell’s Joopiter puts on sale of K-pop star G-Dragon’s prized possessions</string>
    <string name="article4_summarized">Near Seoul’s Gyeongbokgung Palace, a hotly anticipated auction is being brought to life by two global celebrities: American singer and Louis Vuitton men’s creative director, Pharrell Williams, and South Korea’s trailblazing K-pop star, G-Dragon.</string>
    <string name="article5_title">Apple introduces iPhone 16 and iPhone 16 Plus</string>
    <string name="article5_summarized">Built for Apple Intelligence with the all-new A18 chip, both models feature Camera Control, powerful upgrades to the advanced camera system, the Action button to quickly access useful features, and a big boost in battery life</string>
    <string name="article6_title">Harris braces for the most critical moment of her political career at debate with Trump</string>
    <string name="article6_summarized">Kamala Harris’ joyful campaign will Tuesday be hit by the blunt force of reality — a debate with Donald Trump — the most menacing political foe of modern times.</string>
    <string name="time2">USTH News | 10/9/2024</string>
    <string name="article7_title">5 ways to increase your happiness through exercise</string>
    <string name="article7_summarized">Think back to when you were a kid and movement was instinctive — and often infused with pure joy.</string>
    <string name="time5">USTH News | 6/9/2024</string>
    <string name="bookmark_button_description">bookmark_button_description</string>
    <string name="article1_reading">The 39-year-old tapped home from close range in the 88th minute to complete Portugal’s comeback having gone a goal behind in Lisbon.\n\nScott McTominay’s powerful header in the seventh minute had given Scotland a surprise lead and despite consistent pressure, Portugal struggled to find an equalizer.\n\nThat was until Bruno Fernandes fired home from the edge of the area to level the scores in the 54th minute.\n\nPortugal pushed for a winner, with Ronaldo striking the post and Scotland goalkeeper Angus Gunn twice denying João Félix with superb saves.\n\nAnd just when it looked like both teams would have to settle for a draw, Ronaldo popped up at the back post to convert a dangerous cross from left-back Nuno Mendes.\n\nIt was his second goal in as many games during this international break, having scored his 900th career goal on Thursday against Croatia. It was also his 132nd goal for Portugal, on top of 450 for Real Madrid, 145 for Manchester United, 101 for Juventus, 68 for Al Nassr and five for Sporting Lisbon.</string>
    <string name="article1_reading2">Ronaldo taps home from close range to make it 2-1 for Portugal against Scotland. Craig Williamson/SNS Group/Getty Images</string>
    <string name="bookmark_1">bookmark 1</string>
    <string name="bookmark_2">bookmark 2 </string>
    <string name="bookmark_3">bookmark 3 </string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language_select">Languages</string>
    <string name="personal_details">Personal details</string>
    <string name="Cookies">Cookies and Privacy</string>
    <string name="email">Email Preferences</string>
    <string name="filter">Content Filter</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="example">Example</string>
    <string name="example_gmail_com">example@gmail.com</string>
</resources>