<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/white"
    android:padding="16dp">

    <!-- Profile Image Section -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_profile" />

    <!-- Account Name Container -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_background"
        android:padding="16dp"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/boxed_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="8dp"
            android:text="@string/example"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Account Email Container -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_background"
        android:layout_marginTop="10dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/boxed_account_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:text="@string/example_gmail_com"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

    </RelativeLayout>

    <!-- Edit Profile Button -->
    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_btn_blue"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <!-- Logout Button -->
    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_btn_red"
        android:padding="12dp"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>
