<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/bookmark"
            android:src="@drawable/ic_account"
            android:layout_marginStart="-70dp"
            android:scaleType="fitCenter"
            android:background="@null">
        </ImageButton>

        <TextView
            android:id="@+id/saved_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:padding="2dp" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/setting"
            android:src="@drawable/ic_settings"
            android:layout_marginStart="40dp"
            android:scaleType="fitCenter"
            android:background="@null">
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginEnd="-70dp"
            android:padding="10dp" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="@color/black" />

    <!-- Scrollable menu section -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Menu items -->
            <TextView
                android:id="@+id/news_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saved articles"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingVertical="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="90dp"
                        android:src="@drawable/first"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/first"
                        android:adjustViewBounds="true"
                        android:layout_marginEnd="10dp" >
                    </ImageView>

                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="@string/typhoon_yagi_converted_from_quang_ninh_to_hai_phong"
                        android:textColor="@color/black"/>

                    <ImageButton
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:adjustViewBounds="true"
                        android:layout_marginEnd="10dp"
                        android:background="@null"
                        android:contentDescription="@string/bookmark_1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/bookmark_gold"
                        android:padding="20dp">
                    </ImageButton>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="15dp"
                    android:background="#D3D3D3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="90dp"
                        android:src="@drawable/second"
                        android:contentDescription="@string/second"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_marginEnd="10dp" >
                    </ImageView>

                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:text="@string/canceled_the_match_between_thailand_and_russia"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginEnd="10dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/bookmark_2"
                        android:scaleType="fitCenter"
                        android:background="@null"
                        android:src="@drawable/bookmark_gold"
                        android:padding="20dp">
                    </ImageView>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="15dp"
                    android:background="#D3D3D3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="90dp"
                        android:src="@drawable/third"
                        android:contentDescription="@string/third"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_marginEnd="10dp" >
                    </ImageView>

                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/the_reason_why_little_house_on_the_prairie_left_the_city_to_return_to_the_countryside"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <ImageButton
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/bookmark_3"
                        android:scaleType="fitCenter"
                        android:background="@null"
                        android:src="@drawable/bookmark_gold"
                        android:padding="20dp">
                    </ImageButton>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="15dp"
                    android:background="#D3D3D3" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>