<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SettingsFragment"
    android:background="@color/white">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="start">


        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/setting"
            android:src="@drawable/ic_settings"
            android:scaleType="fitCenter"
            android:background="@null">
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:padding="2dp" >
        </TextView>



    </LinearLayout>
    <!--personal details -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="10dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/personal_details"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- cooki -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="10dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cookies"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>
    <!-- noti -->

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="10dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enable_notifications"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/switch_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumbTint="@color/black"
            android:trackTint="@color/black"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />
    <!-- Dark Mode -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_mode"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <CheckBox
            android:id="@+id/checkbox_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />
    <!-- language select -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/language_select"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/language_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/languages"
            android:backgroundTint="@color/black" />

    </LinearLayout>

    <!-- email pref -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="10dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>
    <!-- Filter -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="10dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />


    <!-- Logout Option -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/logout_button"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/logout_icon"
            android:contentDescription="@string/logout"
            android:background="@null"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginStart="280dp" />


    </LinearLayout>

</LinearLayout>